tests/invalid/capture_bad.lc

eval beta_capture :
     (\x y -> (\x -> x) y x) (y (\x -> x))
 =b> (\y -> (\x -> x) y (y (\x -> x)))
